--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -64,10 +64,6 @@ on:
         type: boolean
         default: true
         description: 'If false, will use ArgoCD Updater instead of pushing to kube-manifests'
-      argocd-server:
-        required: false
-        type: string
-        description: 'ArgoCD hostname'
     secrets:
       GHL_USERNAME:
         required: true
@@ -92,7 +88,7 @@ on:
         description: 'Slack app token'
       ARGOCD_TOKEN:
         required: false # REQUIRED WHEN USING `upload-open-api`!!!
-        description: 'ArgoCD token'
+        description: 'ArgoCD token - should be set to ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION'
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read
@@ -103,6 +99,8 @@ jobs:
   init:
     name: Sending first Slack message
     runs-on: ubuntu-latest
+    env:
+      argocd-token: ${{ secrets.ARGOCD_TOKEN }}
     timeout-minutes: 5
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
@@ -110,6 +108,7 @@ jobs:
       service-cluster: ${{ steps.get-manifest-info.outputs.cluster }}
       service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
       service-name: ${{ steps.get-manifest-info.outputs.service-name }}
+      argocd-server: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
     steps:
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
@@ -127,6 +126,26 @@ jobs:
       - id: arm64
         if: ${{ inputs.arm-build }}
         run: echo "runner=self-hosted-arm64" >> $GITHUB_OUTPUT
+      - id: verify-argocd-token
+        if: ${{ ! inputs.push-to-manifests }}
+        shell: bash
+        run: |
+          if [ "${{ secrets.ARGOCD_TOKEN }}" == '' ]; then
+            echo "MUST INPUT ARGOCD_TOKEN SECRET"
+            echo "ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION"
+            exit 1
+          fi
+      - id: set-argocd-server
+        if: ${{ env.argocd-token != '' }}
+        env:
+          STAGE: ${{ inputs.stage }}
+        run: |
+          if [[ $STAGE =~ dev|staging ]]; then
+            ARGOCD_HOSTNAME="argocd.staging.monta.app"
+          else
+            ARGOCD_HOSTNAME="argocd.monta.app"
+          fi
+          echo "argocd-hostname=$ARGOCD_HOSTNAME" >> "$GITHUB_OUTPUT"
       - name: Get manifest info
         id: get-manifest-info
         if: ${{ inputs.upload-open-api }}
@@ -135,22 +154,35 @@ jobs:
           SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
           STAGE: ${{ inputs.stage }}
           ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+          ARGOCD_SERVER: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
         run: |
           if [ "${{ secrets.ARGOCD_TOKEN }}" == '' ]; then
             echo "MUST INPUT ARGOCD_TOKEN SECRET"
+            echo "ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION"
             exit 1
           fi
           curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           sudo chmod +x argocd
-          K8S_CLUSTER=$(./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.cluster')
+          K8S_CLUSTER=$(./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.cluster')
           if [ $K8S_CLUSTER == "main-prod" ]; then
             export K8S_CLUSTER="main-production"
           fi
           echo "cluster=$K8S_CLUSTER" >> "$GITHUB_OUTPUT"
-          K8S_NAMESPACE=$(./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.namespace')
+          K8S_NAMESPACE=$(./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.namespace')
           echo "namespace=$K8S_NAMESPACE" >> "$GITHUB_OUTPUT"
-          SERVICE_NAME=$(./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app manifests argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} | yq 'select(di == 1) | .metadata.labels."app.kubernetes.io/name"')
+          SERVICE_NAME=$(./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app manifests argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} | yq 'select(di == 1) | .metadata.labels."app.kubernetes.io/name"')
           echo "service-name=$SERVICE_NAME" >> "$GITHUB_OUTPUT"
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: failure()
+        with:
+          job-type: "test"
+          job-status: ${{ job.status }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   test:
     name: Test
@@ -583,10 +615,11 @@ jobs:
         shell: bash
         env:
           ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+          ARGOCD_SERVER: ${{ needs.init.outputs.argocd-server }}
         run: |
-          OLD_TAG=$(./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} --show-params -o yaml | yq -e=0 '.spec.source.helm.parameters[] | select(.name == "image.tag").value')
-          ./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app patch ${{ inputs.service-identifier }}-${{ inputs.stage }} --patch='[{"op": "replace", "path": "/spec/info/0", "value": {"name": "Source Code Diff", "value": "'"https://github.com/${{ github.repository }}/compare/${OLD_TAG::8}...${GITHUB_SHA::8}"'"}}]'
-          ./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app set argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -p kotlin.revision=${GITHUB_SHA::8} -p kotlin.build=${{ github.run_number }} -p kotlin.image.tag=${GITHUB_SHA}
+          OLD_TAG=$(./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} --show-params -o yaml | yq -e=0 '.spec.source.helm.parameters[] | select(.name == "image.tag").value')
+          ./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app patch ${{ inputs.service-identifier }}-${{ inputs.stage }} --patch='[{"op": "replace", "path": "/spec/info/0", "value": {"name": "Source Code Diff", "value": "'"https://github.com/${{ github.repository }}/compare/${OLD_TAG::8}...${GITHUB_SHA::8}"'"}}]'
+          ./argocd --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app set argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -p kotlin.revision=${GITHUB_SHA::8} -p kotlin.build=${{ github.run_number }} -p kotlin.image.tag=${GITHUB_SHA}
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: always()
