--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -64,10 +64,6 @@ on:
         type: boolean
         default: true
         description: 'If false, will use ArgoCD Updater instead of pushing to kube-manifests'
-      argocd-server:
-        required: false
-        type: string
-        description: 'ArgoCD hostname'
     secrets:
       GHL_USERNAME:
         required: true
@@ -91,9 +87,8 @@ on:
         required: true
         description: 'Slack app token'
       ARGOCD_TOKEN:
-        required: false
-        description: 'ArgoCD token'
-
+        required: false # REQUIRED WHEN USING `upload-open-api`!!!
+        description: 'ArgoCD token - should be set to ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION'
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read
@@ -104,10 +99,16 @@ jobs:
   init:
     name: Sending first Slack message
     runs-on: ubuntu-latest
+    env:
+      argocd-token: ${{ secrets.ARGOCD_TOKEN }}
     timeout-minutes: 5
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
       runners: ${{ toJSON(steps.*.outputs.runner) }}
+      service-cluster: ${{ steps.get-manifest-info.outputs.cluster }}
+      service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
+      service-name: ${{ steps.get-manifest-info.outputs.service-name }}
+      argocd-server: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
     steps:
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
@@ -125,6 +126,63 @@ jobs:
       - id: arm64
         if: ${{ inputs.arm-build }}
         run: echo "runner=self-hosted-arm64" >> $GITHUB_OUTPUT
+      - id: verify-argocd-token
+        if: ${{ ! inputs.push-to-manifests }}
+        shell: bash
+        run: |
+          if [ "${{ secrets.ARGOCD_TOKEN }}" == '' ]; then
+            echo "::error::MUST INPUT ARGOCD_TOKEN SECRET"
+            echo "ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION"
+            exit 1
+          fi
+      - id: set-argocd-server
+        if: ${{ env.argocd-token != '' }}
+        env:
+          STAGE: ${{ inputs.stage }}
+        run: |
+          if [[ $STAGE =~ dev|staging ]]; then
+            ARGOCD_HOSTNAME="argocd.staging.monta.app"
+          else
+            ARGOCD_HOSTNAME="argocd.monta.app"
+          fi
+          echo "argocd-hostname=$ARGOCD_HOSTNAME" >> "$GITHUB_OUTPUT"
+      - name: Get manifest info
+        id: get-manifest-info
+        if: ${{ inputs.upload-open-api }}
+        shell: bash
+        env:
+          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
+          STAGE: ${{ inputs.stage }}
+          ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+          ARGOCD_SERVER: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
+        run: |
+          if [ "${{ secrets.ARGOCD_TOKEN }}" == '' ]; then
+            echo "::error::MUST INPUT ARGOCD_TOKEN SECRET"
+            echo "ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION"
+            exit 1
+          fi
+          curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          sudo chmod +x argocd
+          K8S_CLUSTER=$(./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.cluster')
+          if [ $K8S_CLUSTER == "main-prod" ]; then
+            export K8S_CLUSTER="main-production"
+          fi
+          echo "cluster=$K8S_CLUSTER" >> "$GITHUB_OUTPUT"
+          K8S_NAMESPACE=$(./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -o yaml | yq '.spec.destination.namespace')
+          echo "namespace=$K8S_NAMESPACE" >> "$GITHUB_OUTPUT"
+          SERVICE_NAME=$(./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app manifests argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} | yq 'select(di == 1) | .metadata.labels."app.kubernetes.io/name"')
+          echo "service-name=$SERVICE_NAME" >> "$GITHUB_OUTPUT"
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: failure()
+        with:
+          job-type: "test"
+          job-status: ${{ job.status }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   test:
     name: Test
@@ -180,38 +238,10 @@ jobs:
           slack-channel-id: ${{ inputs.slack-channel-id }}
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
-  get-manifest-info:
-    if: ${{ inputs.upload-open-api }}
-    name: Get manifest information
-    needs: [ test ]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    outputs:
-      service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
-      service-name: ${{ steps.get-manifest-info.outputs.service-name }}
-    steps:
-      - name: Check out manifest repository
-        uses: actions/checkout@v4
-        with:
-          repository: monta-app/kube-manifests
-          token: ${{ secrets.MANIFEST_REPO_PAT }}
-      - name: Get manifest info
-        id: get-manifest-info
-        shell: bash
-        env:
-          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
-          STAGE: ${{ inputs.stage }}
-        run: |
-          # Read namespace from config.yaml
-          K8S_NAMESPACE=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/cluster/config.yaml | yq '.namespace')
-          echo "namespace=$K8S_NAMESPACE" >> "$GITHUB_OUTPUT"
-          # Read service name from values.yaml
-          SERVICE_NAME=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/app/values.yaml | yq '.[] | select(key == "laravel" or key == "kotlin").fullnameOverride')
-          echo "service-name=$SERVICE_NAME" >> "$GITHUB_OUTPUT"
   update-open-api-spec:
     if: ${{ inputs.upload-open-api }}
     name: Update OpenAPI Spec
-    needs: [ get-manifest-info ]
+    needs: [ init, test, build ]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -227,6 +257,21 @@ jobs:
         shell: bash
         run: |
           curl --proto '=https' --tlsv1.2 -sSfL https://run.linkerd.io/install | sh
+      - name: Install kubectl CLI
+        shell: bash
+        run: |
+          curl -LO https://dl.k8s.io/release/v1.28.4/bin/linux/amd64/kubectl
+          sudo chmod +x kubectl
+      - name: Install Teleport
+        uses: teleport-actions/setup@v1
+        with:
+          version: 14.1.5
+      - name: Authorize against Teleport
+        uses: teleport-actions/auth-k8s@v2
+        with:
+          proxy: 'teleport.monta.app:443'
+          token: github-actions
+          kubernetes-cluster: ${{ needs.init.outputs.service-cluster }}
       - name: Update Path with LinkerD CLI
         shell: bash
         run: |
@@ -248,8 +293,8 @@ jobs:
         shell: bash
         env:
           GRADLE_MODULE: ${{ inputs.gradle-module }}
-          K8S_NAMESPACE: ${{ needs.get-manifest-info.outputs.service-namespace }}
-          SERVICE_NAME: ${{ needs.get-manifest-info.outputs.service-name }}
+          K8S_NAMESPACE: ${{ needs.init.outputs.service-namespace }}
+          SERVICE_NAME: ${{ needs.init.outputs.service-name }}
         run: |
           # Hardcoded target directory
           TARGET_DIR="build/tmp/kapt3/classes/main/META-INF/swagger"
@@ -278,34 +323,7 @@ jobs:
 
           linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $SERVICE_NAME >> service-profile.yaml
 
-          SERVICE_PROFILE=$(realpath service-profile.yaml)
-          echo "Service Profile path $SERVICE_PROFILE"
-          echo "service-profile-path=$SERVICE_PROFILE" >> "$GITHUB_OUTPUT"
-
-      - name: Generate commit info
-        id: generate-commit-info
-        shell: bash
-        env:
-          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
-          STAGE: ${{ inputs.stage }}
-        run: |
-          DESTINATION_PATH="apps/${SERVICE_IDENTIFIER}/${STAGE}/app/templates"
-          echo "Destination path $DESTINATION_PATH"
-          echo "destination-path=$DESTINATION_PATH" >> "$GITHUB_OUTPUT"
-          COMMIT_MESSAGE="chore($SERVICE_IDENTIFIER): updated open API spec for $STAGE"
-          echo "Commit message $COMMIT_MESSAGE"
-          echo "commit-message=$COMMIT_MESSAGE" >> "$GITHUB_OUTPUT"
-      - name: Push service profile to repository
-        uses: dmnemec/copy_file_to_another_repo_action@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.MANIFEST_REPO_PAT }}
-        with:
-          source_file: ${{ steps.create-service-profile.outputs.service-profile-path }}
-          destination_repo: 'monta-app/kube-manifests'
-          destination_folder: ${{ steps.generate-commit-info.outputs.destination-path }}
-          user_email: "action@github.com"
-          user_name: "GitHub Action"
-          commit_message: ${{ steps.generate-commit-info.outputs.commit-message }}
+          kubectl -n $K8S_NAMESPACE apply -f service-profile.yaml
 
   build:
     name: Build
@@ -597,10 +615,11 @@ jobs:
         shell: bash
         env:
           ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+          ARGOCD_SERVER: ${{ needs.init.outputs.argocd-server }}
         run: |
-          OLD_TAG=$(./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} --show-params -o yaml | yq -e=0 '.spec.source.helm.parameters[] | select(.name == "image.tag").value')
-          ./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app patch ${{ inputs.service-identifier }}-${{ inputs.stage }} --patch='[{"op": "replace", "path": "/spec/info/0", "value": {"name": "Source Code Diff", "value": "'"https://github.com/${{ github.repository }}/compare/${OLD_TAG::8}...${GITHUB_SHA::8}"'"}}]'
-          ./argocd --auth-token $ARGOCD_TOKEN --server ${{ inputs.argocd-server }} app set argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -p kotlin.revision=${GITHUB_SHA::8} -p kotlin.build=${{ github.run_number }} -p kotlin.image.tag=${GITHUB_SHA}
+          OLD_TAG=$(./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app get argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} --show-params -o yaml | yq -e=0 '.spec.source.helm.parameters[] | select(.name == "image.tag").value')
+          ./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app patch ${{ inputs.service-identifier }}-${{ inputs.stage }} --patch='[{"op": "replace", "path": "/spec/info/0", "value": {"name": "Source Code Diff", "value": "'"https://github.com/${{ github.repository }}/compare/${OLD_TAG::8}...${GITHUB_SHA::8}"'"}}]'
+          ./argocd --grpc-web --auth-token $ARGOCD_TOKEN --server $ARGOCD_SERVER app set argocd/${{ inputs.service-identifier }}-${{ inputs.stage }} -p kotlin.revision=${GITHUB_SHA::8} -p kotlin.build=${{ github.run_number }} -p kotlin.image.tag=${GITHUB_SHA}
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: always()
