--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -322,8 +322,37 @@ jobs:
           fi
 
           linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $SERVICE_NAME >> service-profile.yaml
+          
+          cat <<EOB >> clean-service-profiles.sh
+          #!/bin/bash
+          yq service-profile.yaml
+          yq service-profile.yaml | yq 'del(.spec.routes[].responseClasses)' service-profile.yaml > service-profile-new.yaml
+          cat <<EOT >> service-profile-new.yaml
+              - condition:
+                  method: POST
+                name: POST [Default]
+              - condition:
+                  method: GET
+                name: GET [Default]
+              - condition:
+                  method: PATCH
+                name: PATCH [Default]
+              - condition:
+                  method: PUT
+                name: PUT [Default]
+              - condition:
+                  method: HEAD
+                name: HEAD [Default]
+              - condition:
+                  method: OPTIONS
+                name: OPTIONS [Default]
+          EOT
+          yq service-profile-new.yaml
+          EOB
 
-          kubectl -n $K8S_NAMESPACE apply -f service-profile.yaml
+          bash clean-service-profiles.sh
+          
+          kubectl -n $K8S_NAMESPACE apply -f service-profile-new.yaml
 
   build:
     name: Build
